# boundless

./: .dockerignore  .dprint.jsonc  .env  .env-compose  .env.base  .env.base-sepolia  .env.broker-template  .env.eth-sepolia  .env.localnet-template  .env.testnet  .gitignore  .gitmodules  .watchmanconfig  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  RELEASE.md  balance_plot.py  biome.json  broker-template.toml  broker.toml  compose.yml  compose_local.yml  deny.toml  deployments-check.py  foundry.toml  image-id-check.sh  justfile  license-check.py  lychee.toml  offer.yaml  remappings.txt  request.yaml  rust-toolchain.toml
bento/: Cargo.toml  Makefile
bento/crates/api/: Cargo.toml
bento/crates/api/src/: helpers.rs  lib.rs
bento/crates/bento-client/: Cargo.toml
bento/crates/bento-client/src/: bento_cli.rs
bento/crates/sample-guest/methods/: build.rs
bento/crates/task-queue/: Cargo.toml
bento/crates/task-queue/src/: lib.rs
bento/crates/taskdb/benches/: taskdb.rs
bento/crates/taskdb/examples/: stress.rs
bento/crates/taskdb/migrations/: 3_buffers.sql
bento/crates/taskdb/src/: lib.rs
bento/crates/taskdb/tests/: e2e.rs
bento/crates/workflow/: Cargo.toml
bento/crates/workflow-common/src/: lib.rs  s3.rs
bento/crates/workflow/src/: lib.rs  redis.rs
bento/lib/systemd/: bento-agent.service  bento-api.service
crates/aggregation-set/: Cargo.toml
crates/aggregation-set/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: helpers.rs  lib.rs
crates/assessor/: Cargo.toml
crates/assessor/src/: lib.rs
crates/balance-alerts-layer/: Cargo.toml
crates/balance-alerts-layer/src/: lib.rs
crates/bench/: Cargo.toml  README.md
crates/bench/data/: small_test.json
crates/bench/scripts/: process.py
crates/bench/src/: bench.rs  db.rs  lib.rs  main.rs
crates/bento-client/: Cargo.toml  method_name
crates/bento-client/src/: bento_cli.rs
crates/boundless-cli/: Cargo.toml  build.rs
crates/boundless-cli/src/: client.rs  lib.rs  prover.rs  request.rs  rpc.rs  selector.rs  util.rs
crates/boundless-cli/src/request_builder/: finalizer.rs  mod.rs  offer_layer.rs  preflight_layer.rs  request_id_layer.rs  requirements_layer.rs  storage_layer.rs
crates/boundless-core/: Cargo.toml
crates/boundless-core/src/: input.rs  lib.rs  util.rs
crates/boundless-core/src/storage/: file.rs  mock.rs  mod.rs  pinata.rs  s3.rs
crates/boundless-market/: Cargo.toml  README.md  build.rs
crates/boundless-market/src/: balance_alerts_layer.rs  client.rs  deployments.rs  dynamic_gas_filler.rs  input.rs  lib.rs  mutex_layer.rs  nonce_layer.rs  order_stream_client.rs  resettable_nonce_layer.rs  selector.rs  storage.rs  util.rs
crates/boundless-market/src/contracts/: boundless_market.rs  bytecode.rs  hit_points.rs  mod.rs  proof_market.rs  set_verifier.rs  test_utils.rs
crates/boundless-market/src/request_builder/: finalizer.rs  mod.rs  offer_layer.rs  preflight_layer.rs  request_id_layer.rs  requirements_layer.rs  storage_layer.rs
crates/boundless-market/src/sdk/: client.rs  mod.rs
crates/boundless-market/src/storage/: fetch.rs  file.rs  mock.rs  mod.rs  pinata.rs  s3.rs
crates/boundless-market/test-utils/: Cargo.toml
crates/boundless-market/test-utils/src/: lib.rs
crates/boundless-market/tests/: e2e.rs
crates/boundless-mcp-server/: Cargo.toml  README.md  mcp-config.toml  test-config.toml
crates/boundless-mcp-server/src/: config.rs  db.rs  main.rs  tools.rs
crates/boundless-sdk/: Cargo.toml
crates/boundless-sdk/src/: client.rs  contracts.rs  input.rs  lib.rs  mod.rs  rpc.rs  selector.rs  util.rs
crates/boundless-sdk/src/request_builder/: finalizer.rs  mod.rs  offer_layer.rs  preflight_layer.rs  request_id_layer.rs  requirements_layer.rs  storage_layer.rs
crates/boundless-sdk/src/storage/: fetch.rs  file.rs  mock.rs  mod.rs  (+2 more)
crates/broker/: Cargo.toml
crates/broker-stress/: Cargo.toml  README.md
crates/broker-stress/src/: main.rs  toxiproxy.rs
crates/broker/migrations/: 1_broker.sql  2_fulfill_and_locked.sql  3_simplify_orders_and_actor_state.sql
crates/broker/src/: aggregator.rs  broker_api.rs  chain_monitor.rs  config.rs  db.rs  errors.rs  futures_retry.rs  gas.rs  lib.rs  market_monitor.rs  offchain_market_monitor.rs  order_monitor.rs  order_picker.rs  prioritization.rs  provers.rs  proving.rs  reaper.rs  rpc_retry_policy.rs  storage.rs  submitter.rs  task.rs  utils.rs
crates/distributor/: Cargo.toml
crates/distributor/src/: main.rs
crates/indexer/: Cargo.toml
crates/indexer/migrations/: 1_transactions.sql  2_events.sql  3_proof_requests.sql  4_fulfillments.sql  5_metrics.sql  6_blocks.sql
crates/indexer/src/: db.rs  lib.rs  main.rs  test_utils.rs
crates/indexer/tests/: basic.rs
crates/libroker/: Cargo.toml
crates/libroker/src/: aggregator.rs  lib.rs  lock.rs  pricing.rs  prove.rs  submitter.rs
crates/market-tracker/: Cargo.toml
crates/market-tracker/src/: main.rs
crates/order-generator/: Cargo.toml
crates/order-generator/src/: main.rs
crates/order-stream/: Cargo.toml
crates/order-stream/migrations/: 1_order_stream.sql  2_broker_updated.sql  3_order_time.sql
crates/order-stream/src/: api.rs  lib.rs  order_db.rs  ws.rs
crates/prover/: Cargo.toml
crates/prover/src/: bonsai.rs  boundless.rs  lib.rs  local.rs
crates/resolve/: Cargo.toml
crates/resolve/src/: lib.rs
crates/rpc-test-proxy/: Cargo.toml
crates/rpc-test-proxy/src/: lib.rs
crates/shrink_bitvm2/: Cargo.toml
crates/shrink_bitvm2/src/: lib.rs
crates/slasher/: Cargo.toml
crates/slasher/migrations/: 1_slasher.sql
crates/slasher/src/: db.rs  lib.rs  main.rs
crates/slasher/tests/: basic.rs
crates/taskdb/: Cargo.toml
crates/taskdb/benches/: simple.rs  taskdb.rs
crates/taskdb/examples/: stress.rs
crates/taskdb/migrations/: 1_taskdb.sql
crates/taskdb/src/: lib.rs
crates/taskdb/tests/: e2e.rs
crates/workflow/: Cargo.toml
crates/workflow-common/: Cargo.toml
crates/workflow-common/src/: lib.rs
crates/workflow/src/: lib.rs  redis.rs
documentation/doc-test/: Cargo.toml  build.rs
documentation/doc-test/src/: lib.rs
(+704 files in other folders)
