[workspace]
resolver = "2"
members = [
    "crates/assessor",
    "crates/bench",
    "crates/boundless-cli",
    "crates/boundless-market",
    "crates/boundless-market/test-utils",
    "crates/broker",
    "crates/broker-stress",
    "crates/distributor",
    "crates/guest/assessor",
    "crates/guest/util",
    "crates/indexer",
    "crates/ops-lambdas/indexer-monitor",
    "crates/order-generator",
    "crates/order-stream",
    "crates/slasher",
    "documentation/doc-test",
]

[workspace.package]
version = "0.13.0"
edition = "2021"
homepage = "https://beboundless.xyz/"
repository = "https://github.com/boundless-xyz/boundless/"

[workspace.dependencies]
boundless-assessor = { version = "0.13.0", path = "crates/assessor" }
boundless-cli = { version = "0.13.0", path = "crates/boundless-cli" }
boundless-market = { version = "0.13.0", path = "crates/boundless-market" }
boundless-market-test-utils = { path = "crates/boundless-market/test-utils" }
distributor = { path = "crates/distributor" }
guest-assessor = { path = "crates/guest/assessor" }
guest-util = { path = "crates/guest/util" }
order-stream = { path = "crates/order-stream" }

async-stream = "0.3"
alloy = { version = "1.0", default-features = false }
alloy-primitives = { version = "1.0" }
alloy-sol-types = { version = "1.0", features = ["json"] }
alloy-chains = "0.2.0"
anyhow = { version = "1.0" }
async-trait = "0.1"
aws-config = { version = "1.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.34" # used for minio for max compatibility
axum = "0.8"
axum-extra = { version = "0.10" }
bincode = "1.3"
bonsai-sdk = { version = "1.4", features = ["non_blocking"] }
bs58 = "0.5"
bytemuck = "1.16"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
postcard = { version = "1.0" }
rand = { version = "0.9" }
reqwest = "0.12"
risc0-aggregation = { version = "0.7.1" }
risc0-build = { version = "2.3", features = ["docker", "unstable"] }
risc0-circuit-recursion = { version = "3.0" }
risc0-build-ethereum = { version = "2.2" }
risc0-ethereum-contracts = { version = "2.2" }
risc0-zkvm = { version = "2.3", default-features = false }
risc0-zkp = { version = "2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
guest-set-builder = { git = "https://github.com/risc0/risc0-ethereum", tag = "aggregation-v0.7.1" }
rmp-serde = { version = "1.3" }
sha2 = { version = "0.10" }
sqlx = { version = "0.8", default-features = false }
tempfile = "3.10"
test-log = { version = "0.2", features = ["trace"] }
thiserror = "2.0"
tokio = { version = "1" }
tokio-util = { version = "0.7" }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = { version = "0.2" }
url = "2.5"
uuid = { version = "1.7", features = ["v4"] }
utoipa = "5.2"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

# [profile.release]
# lto = "fat"
# codegen-units = 1
