[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/bento-client",
    "crates/taskdb",
    "crates/workflow",
    "crates/workflow-common"
]

[workspace.package]
version = "0.5.0"
edition = "2021"
homepage = "https://beboundless.xyz/"
repository = "https://github.com/boundless-xyz/boundless/"

[workspace.dependencies]
bento-client = { path = "crates/bento-client" }
taskdb = { path = "crates/taskdb" }
workflow = { path = "crates/workflow" }
workflow-common = { path = "crates/workflow-common" }

anyhow = { version = "1.0" }
async-trait = "0.1"
aws-sdk-s3 = "1.34" # used for minio for max compatibility
bincode = "1.3"
bytemuck = "1.16"
deadpool-redis = "0.15"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
redis = { version = "0.25", features = ["tokio-comp"] }
tempfile = "3.10"
sqlx = { version = "0.7", default-features = false }
bonsai-sdk = { version = "1.2.1", features = ["non_blocking"] }
thiserror = "1.0"
tokio = { version = "1" }
clap = { version = "4.5", features = ["derive", "env"] }
risc0-zkvm = { version = "1.2.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4"] }

[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

# Possibly faster runtime config:
# [build]
# rustflags = ["-Ctarget-cpu=native", "-C lto"]
