[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/bento-client",
    "crates/sample-guest/common",
    "crates/sample-guest/methods",
    "crates/task-queue",
    "crates/workflow",
    "crates/workflow-common"
]

[workspace.package]
version = "0.7.0"
edition = "2021"
homepage = "https://beboundless.xyz/"
repository = "https://github.com/boundless-xyz/boundless/"

[workspace.dependencies]
anyhow = { version = "1.0" }
aws-sdk-s3 = "1.82" # used for minio for max compatibility
bento-client = { path = "crates/bento-client" }
bincode = "1.3"
bonsai-sdk = { version = "1.4.0", features = ["non_blocking"] }
bytemuck = "1.22"
clap = { version = "4.5", features = ["derive", "env"] }
deadpool-redis = "0.20"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
risc0-build = "2.1.0"
risc0-zkvm = { version = "2.0.1", default-features = false }
sample-guest-common = { path = "crates/sample-guest/common" }
sample-guest-methods = { path = "crates/sample-guest/methods" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false }
task-queue = { path = "crates/task-queue" }
tempfile = "3.19.1"
thiserror = "2.0"
tokio = { version = "1.44.2", features = ["signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.16.0", features = ["v4"] }
workflow = { path = "crates/workflow" }
workflow-common = { path = "crates/workflow-common" }

[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

# Possibly faster runtime config:
# [build]
# rustflags = ["-Ctarget-cpu=native", "-C lto"]
