[package]
name = "aggregation-set"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
guest-set-builder = { workspace = true, optional = true }
hex = { workspace = true }
risc0-binfmt = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = ["verify"]
verify = ["dep:guest-set-builder"]
