[package]
name = "aggregation-set"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
guest-set-builder = { workspace = true, optional = true }
hex = { workspace = true }
risc0-binfmt = { workspace = true }
risc0-ethereum-contracts = { workspace = true, optional = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = ["verify", "host"]
verify = ["dep:guest-set-builder"]
# TODO(risc0-ethereum#304): risc0-ethereum-contracts does not build in the guest
host = ["dep:risc0-ethereum-contracts"]
