[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = "0.7"
bonsai-sdk = { workspace = true }
clap = { workspace = true, features = ["env", "derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
taskdb = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["serde"] }
workflow-common = { workspace = true }
