[package]
name = "assessor"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true, features = ["k256"] }
alloy-sol-types = { workspace = true, features = ["eip712-serde"] }
anyhow = { workspace = true }
boundless-market = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
risc0-zkvm = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
alloy = { workspace = true }
guest-assessor = { workspace = true }
guest-util = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
test-log = { workspace = true }
