[package]
name = "boundless-assessor"
description = "Assessor guest APIs, part of the Boundless Market"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[dependencies]
alloy-primitives = { workspace = true, features = ["k256"] }
alloy-sol-types = { workspace = true, features = ["eip712-serde"] }
boundless-market = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
risc0-zkvm = { workspace = true, features = ["unstable"] }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
alloy = { workspace = true }
guest-assessor = { workspace = true }
guest-util = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
test-log = { workspace = true }
tokio = { workspace = true }
