[package]
name = "balance-alerts-layer"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "an alloy provider layer warn on low balance"
license = "Apache-2.0"

[dependencies]
alloy = { workspace = true, features = ["network", "providers", "transports"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["network", "providers", "transports", "signers", "signer-local", "rpc", "rpc-types", "node-bindings"] }
tokio = { workspace = true, features = ["full"] }
tracing-test = "0.2"
