[package]
name = "boundless-bench"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[package.metadata.release]
release = false

[dependencies]
alloy = { workspace = true, features = ["network", "node-bindings", "rpc-types", "providers", "transports", "sol-types", "contract", "signers", "signer-local"] }
anyhow = { workspace = true }
boundless-indexer = { path = "../indexer" }
boundless-market = { workspace = true }
bytemuck = { workspace = true }
chrono = "0.4"
clap = { workspace = true, features = ["env"] }
csv = "1.2"
futures = { version = "0.3" }
reqwest = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std", "default"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [ "any", "postgres", "sqlite", "runtime-tokio", "json", "migrate", "macros", "runtime-tokio-rustls"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "fmt", "env-filter"] }
url = { workspace = true }

[dev-dependencies]
boundless-market-test-utils = { workspace = true }
broker = { path = "../broker", features = ["test-utils"] }
tracing-test = { workspace = true }

[features]
