[package]
name = "bento-client"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
bonsai-sdk = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true, features = ["env", "derive"] }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bin]]
name = "bento_cli"
path = "src/bento_cli.rs"
