[package]
name = "boundless-core"
description = "Core functionalities for Boundless, the universal ZK protocol"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
aws-sdk-s3 = "1.34"
bytemuck = { workspace = true }
clap = { workspace = true }
derive_builder = "0.20.2"
hex = { workspace = true }
httpmock = "0.7"
reqwest = { workspace = true, features = ["json", "multipart"] }
risc0-zkvm = { workspace = true, features = ["std", "client"] }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
boundless-market-test-utils = { workspace = true }

[features]
default = []
test-utils = []
