[package]
name = "boundless-market"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std"] }
serde = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }

# Host dependencies
[target.'cfg(not(target_os = "zkvm"))'.dependencies]
aggregation-set = { workspace = true }
alloy = { workspace = true, features = ["network", "node-bindings", "providers", "transports", "sol-types", "contract", "signers", "signer-local"] }
async-trait = "0.1"
aws-sdk-s3 = "1.34"
bincode = { workspace = true }
bonsai-sdk = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
futures-util = { workspace = true }
guest-assessor = { workspace = true }
guest-util = { workspace = true, optional = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std", "client"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true, optional = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }

[dev-dependencies]
guest-util = { workspace = true }
tracing-test = "0.2"

[[bin]]
name = "cli"
required-features = ["cli"]

[features]
cli = ["dep:guest-util", "dep:serde_yaml", "tokio/rt-multi-thread"]
default = ["cli"]
