[package]
name = "boundless-market"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std"] }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

# Host dependencies
[target.'cfg(not(target_os = "zkvm"))'.dependencies]
alloy = { workspace = true, features = ["network", "node-bindings", "rpc-types", "providers", "transports", "sol-types", "contract", "signers", "signer-local"] }
async-stream = { workspace = true }
async-trait = "0.1"
aws-sdk-s3 = "1.34"
bytemuck = { workspace = true }
clap = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
futures-util = { workspace = true }
guest-assessor = { workspace = true }
guest-util = { workspace = true, optional = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
risc0-aggregation = { workspace = true }
risc0-ethereum-contracts = { workspace = true, features = ["unstable"] }
risc0-zkvm = { workspace = true, features = ["std", "client"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true, optional = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
siwe = { version = "0.6", features = ["serde"] }
chrono = { workspace = true }
time = "0.3"
utoipa = { workspace = true }

[[bin]]
name = "cli"
required-features = ["cli"]

[[bin]]
name = "order-generator"
required-features = ["cli"]

[dev-dependencies]
boundless-market = { path = ".", features = ["test-utils"] }
guest-util = { workspace = true }
tracing-test = { workspace = true }

[features]
cli = ["alloy/rpc-types", "dep:clap", "dep:dotenvy", "dep:guest-util", "dep:serde_yaml", "tokio/rt-multi-thread"]
default = ["cli"]
test-utils = []
