[package]
name = "boundless-market"
description = "SDK for the Boundless Market, part of the universal ZK protocol"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std"] }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

# Host dependencies
[target.'cfg(not(target_os = "zkvm"))'.dependencies]
alloy = { workspace = true, features = ["network", "node-bindings", "rpc-types", "providers", "transports", "sol-types", "contract", "signers", "signer-local"] }
async-stream = { workspace = true }
async-trait = "0.1"
aws-sdk-s3 = "1.34"
balance-alerts-layer = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
httpmock = "0.7"
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
risc0-aggregation = { workspace = true }
risc0-circuit-recursion = { workspace = true, optional = true }
risc0-ethereum-contracts = { workspace = true, features = ["unstable"] }
# Drop once upgrading to risc0-zkvm v2.0
risc0-groth16 = { version = "~1.2", optional = true }
risc0-zkvm = { workspace = true, features = ["std", "client"] }
rmp-serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
siwe = { version = "0.6", features = ["serde"] }
chrono = { workspace = true }
time = "0.3"
utoipa = { workspace = true }

[dev-dependencies]
boundless-assessor = { workspace = true }
boundless-market = { path = ".", features = ["test-utils"] }
guest-assessor = { workspace = true }
guest-set-builder = { workspace = true }
guest-util = { workspace = true }
tracing-test = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }

[features]
default = []
test-utils = ["dep:risc0-circuit-recursion"]
