[package]
name = "boundless-mcp-server"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "boundless-mcp-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
alloy = { workspace = true, features = ["provider-http", "rpc-types"] }
futures-util = { workspace = true }
hex = { workspace = true }
regex = "1.10"
which = "6.0"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true, features = ["full"] }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Import types from broker
broker = { path = "../broker" }
boundless-market = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }