[package]
name = "boundless-sdk"
description = "Minimal SDK for Boundless, the universal ZK protocol"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[dependencies]
alloy-chains = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
anyhow = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std"] }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
derive_builder = "0.20.2"
async-stream = { workspace = true }
async-trait = "0.1"
aws-sdk-s3 = "1.34"
bytemuck = { workspace = true }
clap = { workspace = true }
dashmap = "6"
futures = "0.3"
futures-util = { workspace = true }
hex = { workspace = true }
httpmock = "0.7"
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
rmp-serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
siwe = { version = "0.6", features = ["serde"] }
chrono = { workspace = true }
time = "0.3"
utoipa = { workspace = true }

[dev-dependencies]
[features]
default = []
test-utils = []