[package]
name = "boundless-sdk"
description = "Minimal SDK for the Boundless, the universal ZK protocol"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[dependencies]
alloy-chains = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
derive_builder = "0.20.2"
hex = { workspace = true }
risc0-zkvm = { workspace = true, default-features = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = {version = "3.14" }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
url = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["full"] }
boundless-market = { workspace = true }
boundless-market-test-utils = { workspace = true }
order-stream = { workspace = true }
tempfile = { workspace = true }
