[package]
name = "boundless-sdk"
description = "Minimal SDK for the Boundless, the universal ZK protocol"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[lib]
path = "src/mod.rs"

[dependencies]
alloy-chains = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
aws-sdk-s3 = "1.34"
bytemuck = { workspace = true }
clap = { workspace = true }
derive_builder = "0.20.2"
hex = { workspace = true }
httpmock = "0.7"
rand = { workspace = true }
reqwest = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std", "client"] }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { version = "3.14" }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["full"] }
boundless-market = { workspace = true }
boundless-market-test-utils = { workspace = true }
order-stream = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
test-utils = []
